﻿RELEASE HISTORY

29/11/2014 1.00 beta rev 434
    - Added UdpClientHelper (contributed by smeghead)
    - Added jSettings for client side settings persistence (issue #51)
    - Update JQuery Mobile to 1.4.5
    - Fixed bug in popups theming (not adapting when choosing a different theme)
    - Added EndOfLine property both to TcpClientHelper and SerialPortHelper
    - Fixed issues affecting TcpClientHelper (issue #48)
    - Fixed bug in releasing resources used by SerialPortHelper, NetHelper and TcpClientHelper

25/11/2014 1.00 beta rev 431
    - Fixed Arduino Sketch upload issues
    - Patched avrdude on Raspberry Pi SD card to support GPIO#27-DTR and allow direct UART to Arduino upload
    - Added Doxygen project for generating autodocs
    - Removed IsOn/IsOff check from Scheduled On/Off app
    - Added value "Smoothing" option to MCP3008 app

23/11/2014 1.00 beta rev 430
    - Minor fixes to ArduinoAppFactory error reporting
    - Fixes DHT-11 app (finally =)

23/11/2014 1.00 beta rev 429
    - Should fix DHT-11 / DHT-22 values reading issues
    - Added When.SystemStarted / When.SystemStopping events
    - Fixed display unit as Celsius/Fahrenheit based on user's locale settings
    - Deprecated Sensor.Temperature parameter
    - Added support for middle endian date/time formatting
    - Updated Pepper1 Z-Wave database (30+ new devices supported)

22/11/2014 1.00 beta rev 428
    - Added program status led in the program editor
    - Better Arduino compiler errors parsing/reporting

21/11/2014 1.00 beta rev 425
    - Completed Arduino Sketch support inside HomeGenie Program Editor
    - Added DHT-22 app
    - Added SmartIC app for using two MCP23017 I/O expanders
    - Updated Grove-RGB, OneWire, DHT-11 apps
    - Updated Jint Javascript Engine
    - Moved HomeGenie/HomeGenieUI/html to BaseFiles/Common/html
    - Fixed solution build errors under Windows and Mac

20/11/2014 1.00 beta rev 422
    - Added skelton for ProgramEngine.CompileArduino function