@@ -2,8 +2,8 @@
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
   <MonoDevelop.Ide.Workbench ActiveDocument="../HISTORY.TXT">
     <Files>
-      <File FileName="../HISTORY.TXT" Line="10" Column="17" />
-      <File FileName="../HomeGenie/release_info.xml" Line="8" Column="34" />
+      <File FileName="../HISTORY.TXT" Line="5" Column="7" />
+      <File FileName="../HomeGenie/release_info.xml" Line="15" Column="35" />
     </Files>
   </MonoDevelop.Ide.Workbench>
   <MonoDevelop.Ide.DebuggingService.Breakpoints>
